# contextzero

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROMPTS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
contextzero/: __init__.py  brain.py  capsule_builder.py  claude_installer.py  cli.py  conflict_detector.py  doctor.py  duplicate_detector.py  gitfiles.py  noise.py  paths.py  read_map_builder.py  recall.py  reports.py  scanner.py  session_bootstrap.py  stale_detector.py  token_estimator.py
docs/plans/: 2026-07-07-deoverfit.md
evidence/: adoption_metrics_template.md  corporate_usage_confirmation_template.md  evidence_packet_template.md  expert_letter_request_template.md  testimonial_request_template.md
examples/clean_repo/: AGENTS.md  CLAUDE.md  README.md
examples/messy_repo_1/: AGENTS.md  CLAUDE.md  README.md
examples/messy_repo_2/: CLAUDE.md  README.md
examples/messy_repo_big/: AGENTS.md  CLAUDE.md  README.md
launch/: demo_script.md  hacker_news_post.md  launch_post_linkedin.md  launch_post_reddit.md  launch_post_x.md  product_hunt_checklist.md  screenshot_checklist.md
tests/: test_adjoin_regression.py  test_brain.py  test_capsule_builder.py  test_cli_demo.py  test_codex_skill_docs.py  test_conflict_detector.py  test_doctor.py  test_duplicate_detector.py  test_generic_repo.py  test_gitfiles.py  test_noise.py  test_read_map_builder.py  test_recall.py  test_scanner.py  test_scanner_git.py  test_session_bootstrap.py  test_stale_detector.py  test_token_estimator.py
(+17 files in other folders)
